--- a/firebase.json
+++ b/firebase.json
@@ -4,6 +4,13 @@
     "ignore": [
       "firebase.json",
       "**/node_modules/**"
-    ]
+    ],
+    "headers": [{
+      "source": "**/*.@(eot|otf|ttf|ttc|woff|woff2|font.css)",
+      "headers": [{
+        "key": "Access-Control-Allow-Origin",
+        "value": "*"
+      }]
+    }]
   }
 }
